--- a/style/sections/_team.scss
+++ b/style/sections/_team.scss
@@ -42,7 +42,7 @@ html[data-theme='dark'] {
     .team-switch::after {
         content: '';
         position: absolute;
-        bottom: 5px;
+        bottom: 2px;
         left: 0;
         height: 5px;
         width: 0;
